# quantsync

./: .env.example  .gitignore  4107_api_key.txt  API_DOCS.md  README.md  README_EMAIL.md  TESTING_GUIDE.md  asyncapi.yaml  docker-compose.yml  quantsync_postman_collection.json
.github/workflows/: main.yml
frontend/: package.json
frontend/public/: index.html
frontend/src/components/: SignalTable.tsx
postal/: docker-compose.yml
proto/: signal.proto
quantsync-ai-engine/: CHANGES.md  Dockerfile  diag.py  health_handler.py  health_status.py  main.py  pyproject.toml  requirements.txt  runtime_assets.py  server.py  signal_pb2.py  signal_pb2_grpc.py
quantsync-ai-engine/database/: milvus_client.py  redis_config.py
quantsync-ai-engine/envs/: quantsync_env.py
quantsync-ai-engine/ingestion/: crypto_ingestor.py  dukascopy_ingestor.py  ticker_map.py
quantsync-ai-engine/models/: lstm_model.py  ppo_agent.py  trading_env.py  trading_model.py
quantsync-ai-engine/scrapers/: rss_scraper.py  search_engine.py
quantsync-ai-engine/scripts/: bulk_ingest_historical.py  seed_config.py  test_engine_fase29.py  train_lstm.py
quantsync-ai-engine/storage/: supabase_store.py  tidb_store.py  vector_db.py
quantsync-ai-engine/utils/: dukascopy.py  processor.py  reasoner.py
quantsync-gateway/: Dockerfile  go.mod  go.sum  main.go
quantsync-notifier/: Dockerfile  main.py  requirements.txt
scripts/: gen_certs.sh  gen_mtls_certs.py  install_systemd_service.sh  schema.sql
scripts/test/: Listen-WebSocket.ps1  Run-LocalTest.ps1  Send-MockSignal.ps1
(+30 files in other folders)
