[project]
name = "quantsync-ai-engine"
version = "1.0.0"
description = "AI Engine for QuantSync Trading Signal Hub"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.11.0",
    "numpy>=2.3.0",
    "pandas>=3.1.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "langchain>=1.2.0",
    "langchain-community>=1.2.0",
    "langchain-openai>=1.2.0",
    "chromadb>=1.5.9",
    "redis>=7.4.0",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "gymnasium>=1.3.0",
    "duckduckgo-search>=8.1.1",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-chroma>=1.1.0",
    "ccxt>=4.4.0"
]
